Remove auth configs from operations
